# crypto-watch-alert

./: .env  .env.example  .env.test  .gitignore  README.md  alembic.ini  pyproject.toml
migrations/: env.py
src/: main.py
src/alert/: main.py
src/alert/config/: security.py
src/alert/modules/common/services/: db_service.py
src/application/dtos/: alert_dtos.py
src/application/dtos/common/: api_dto.py  guid_dto.py  response_dto.py
src/application/use_cases/: alert.py  alert_use_cases.py  create_alert.py
src/domain/entities/: alert.py
src/domain/interfaces/: alert_repository.py
src/infraestructure/common/services/: db_utils.py
src/infraestructure/config/: env.py
src/infraestructure/migrations/: env.py
src/infraestructure/migrations/versions/: 902651919be8_create_alert_model.py
src/infraestructure/repositories/: alert_repository_db.py
src/interfaces/api/routers/: alert_router.py
src/{{project_name}}/: main.py
src/{{project_name}}/config/: db.py  http.py
src/{{project_name}}/modules/common/services/: http_service.py
tests/: conftest.py  test_create_alert_usecase.py
tests/E2E/: test_create_alert.py  test_delete_alert.py  test_get_alert.py
tests/E2E/fixtures/: alert_E2E_fixtures.py
tests/factories/alert/: alert_factory.py
tests/fixtures/: db_fixtures.py  env_fixtures.py
tests/integration/: test_alert_repository_db.py
tests/integration/fixtures/: alert_repository_fixtures.py
tests/unit_test/: test_create_alert_usecase.py
tests/unit_test/mocks/: mock_alert_repository.py
